--- a/substreams.yaml
+++ b/substreams.yaml
@@ -1,7 +1,7 @@
 specVersion: v0.1.0
 package:
   name: "atomicassets"
-  version: v0.0.1
+  version: v0.0.1-dev
   url: https://github.com/pinax-network/substreams-atomicassets
 
 imports:
