--- a/substreams.yaml
+++ b/substreams.yaml
@@ -1,8 +1,9 @@
 specVersion: v0.1.0
 package:
   name: "atomicassets"
-  version: v0.0.1-dev
+  version: v0.1.0-dev
   url: https://github.com/pinax-network/substreams-atomicassets
+  doc: Substreams on AtomicAssets standard
 
 imports:
   entities: https://github.com/streamingfast/substreams-sink-entity-changes/releases/download/v1.3.0/substreams-sink-entity-changes-v1.3.0.spkg
@@ -35,3 +36,51 @@ modules:
       - map: map_assets
     output:
       type: proto:sf.substreams.sink.entity.v1.EntityChanges
+
+  - name: map_transfers
+    kind: map
+    inputs:
+      - source: sf.antelope.type.v1.Block
+    output:
+      type: proto:antelope.atomicassets.v1.TransferEvents
+  - name: map_schema_events
+    kind: map
+    inputs:
+      - source: sf.antelope.type.v1.Block
+    output:
+      type: proto:antelope.atomicassets.v1.SchemaEvents
+
+  - name: map_collections
+    kind: map
+    inputs:
+      - source: sf.antelope.type.v1.Block
+    output:
+      type: proto:antelope.atomicassets.v1.Collections
+
+  - name: map_templates
+    kind: map
+    inputs:
+      - source: sf.antelope.type.v1.Block
+    output:
+      type: proto:antelope.atomicassets.v1.Templates
+
+  - name: map_schemas
+    kind: map
+    inputs:
+      - source: sf.antelope.type.v1.Block
+    output:
+      type: proto:antelope.atomicassets.v1.Schemas
+
+  - name: map_balances
+    kind: map
+    inputs:
+      - source: sf.antelope.type.v1.Block
+    output:
+      type: proto:antelope.atomicassets.v1.Balances
+
+  - name: map_offers
+    kind: map
+    inputs:
+      - source: sf.antelope.type.v1.Block
+    output:
+      type: proto:antelope.atomicassets.v1.Offers
