--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "atomicassets"
-version = "0.1.0-dev"
-description = "Substreams on AtomicAssets standard"
+version = "0.2.0"
+description = "Substreams for AtomicAssets Tables & Transfers"
 edition = "2021"
 authors = ["Denis <denis@pinax.network>", "Paul <paulm@pinax.network>"]
 
