--- a/substreams.yaml
+++ b/substreams.yaml
@@ -1,13 +1,12 @@
 specVersion: v0.1.0
 package:
   name: "atomicassets"
-  version: v0.1.0-dev
+  version: v0.2.0
   url: https://github.com/pinax-network/substreams-atomicassets
-  doc: Substreams on AtomicAssets standard
+  doc: Substreams for AtomicAssets Tables & Transfers
 
 imports:
   entities: https://github.com/streamingfast/substreams-sink-entity-changes/releases/download/v1.3.0/substreams-sink-entity-changes-v1.3.0.spkg
-  #sql: https://github.com/streamingfast/substreams-sink-sql/releases/download/protodefs-v1.0.3/substreams-sink-sql-protodefs-v1.0.3.spkg
 
 protobuf:
   files:
@@ -21,66 +20,18 @@ binaries:
     file: ./target/wasm32-unknown-unknown/release/atomicassets.wasm
 
 modules:
-  - name: map_assets
+
+  - name: map_events
     kind: map
     inputs:
       - source: sf.antelope.type.v1.Block
     output:
-      type: proto:antelope.atomicassets.v1.AssetsTableOperations
-
+      type: proto:antelope.atomicassets.v1.AnyEvents
+  
 # sink from https://github.com/streamingfast/substreams-sink-entity-changes
   - name: graph_out
     kind: map
     inputs:
-      #- source: sf.substreams.v1.Clock
-      - map: map_assets
+      - map: map_events
     output:
       type: proto:sf.substreams.sink.entity.v1.EntityChanges
-
-  - name: map_transfers
-    kind: map
-    inputs:
-      - source: sf.antelope.type.v1.Block
-    output:
-      type: proto:antelope.atomicassets.v1.TransferEvents
-  - name: map_schema_events
-    kind: map
-    inputs:
-      - source: sf.antelope.type.v1.Block
-    output:
-      type: proto:antelope.atomicassets.v1.SchemaEvents
-
-  - name: map_collections
-    kind: map
-    inputs:
-      - source: sf.antelope.type.v1.Block
-    output:
-      type: proto:antelope.atomicassets.v1.Collections
-
-  - name: map_templates
-    kind: map
-    inputs:
-      - source: sf.antelope.type.v1.Block
-    output:
-      type: proto:antelope.atomicassets.v1.Templates
-
-  - name: map_schemas
-    kind: map
-    inputs:
-      - source: sf.antelope.type.v1.Block
-    output:
-      type: proto:antelope.atomicassets.v1.Schemas
-
-  - name: map_balances
-    kind: map
-    inputs:
-      - source: sf.antelope.type.v1.Block
-    output:
-      type: proto:antelope.atomicassets.v1.Balances
-
-  - name: map_offers
-    kind: map
-    inputs:
-      - source: sf.antelope.type.v1.Block
-    output:
-      type: proto:antelope.atomicassets.v1.Offers
